# kappa-gone

./: .travis.yml  LICENSE  README.md  setup.cfg  setup.py
kappagone/: __init__.py
test/: __init__.py  test_sanity_check.py
