[metadata]
name = kappagone
version = attr: kappagone.VERSION
description = Twitch spam remover or compressor for a less chat-intrusive viewing experience while staying in the loop.
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
license = MIT

author = Ziyad Edher
author_email = ziyad.edher@gmail.com
maintainer = Ziyad Edher
maintainer_email = ziyad.edher@gmail.com


[options]
packages = find:
