[metadata]
name = kappagone
version = attr: kappagone.VERSION
description = Twitch spam remover or compressor for a less chat-intrusive viewing experience while staying in the loop.
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
license = MIT

author = Ziyad Edher
author_email = ziyad.edher@gmail.com
maintainer = Ziyad Edher
maintainer_email = ziyad.edher@gmail.com


[options]
packages = find:

setup_requires=
    pytest_runner
tests_require =
    pytest
    flake8
    flake8-docstrings
    mypy


[aliases]
test=pytest


[flake8]
exclude =
    .eggs,
    .git,
    .mypy_cache,
    .venv,
    build,
    dist,
    kappagone.egg-info,
doctests = True
select = E, F, W, C, H


[mypy]
follow_imports = silent
follow_imports_for_stubs = True
disallow_any_unimported = True
disallow_any_expr = True
disallow_any_decorated = True
disallow_any_explicit = True
disallow_any_generics = True
disallow_subclassing_any = True
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_unused_ignores = True
warn_no_return = True
warn_return_any = True
show_none_errors = True
warn_redundant_casts = True
